@@ -17,8 +17,7 @@ optionP   H2_Air_Plasma_18s_78r_Jachimowsky-Dunn-Kang-Macheret
 option   C3H8_Air_16s_23r_Kundu
 option   C12H23_Air_16s_23r_Kundu
 option   CH4_Air_20s_52r_Yungster
-optionP   Cs_Air_Plasma_13s_Lenard
-optionP   Cs_Air_Plasma_15s_Lenard-Park
+optionP   Cs_Air_Plasma_15s
 option   CO2_Plasma_23s_Park
 optionX	 Air_TEST_3s_0r
 help     A number followed by "s" denotes the number of species within the chemical model while a number followed by "r" denotes the number of reactions. The chemical models that include charged species are denoted by "plasma".  
