@@ -476,13 +476,13 @@ void find_dW_dx (spec_t rhok, spec_t mu, double T, double Te, double Tv, double 
 }
 
 
-void find_Qei(spec_t rhok, double Estar, double Te, double *Qei){
+void find_Qei(gl_t *gl, spec_t rhok, double Estar, double Te, double *Qei){
   *Qei=0.0;
 }
 
 
 
-void find_dQei_dx(spec_t rhok, double Estar, double Te, spec_t dQeidrhok, double *dQeidTe){
+void find_dQei_dx(gl_t *gl, spec_t rhok, double Estar, double Te, spec_t dQeidrhok, double *dQeidTe){
   long spec;
   
   for (spec=0; spec<ns; spec++) dQeidrhok[spec]=0.0;
