@@ -12,9 +12,9 @@ void find_W(gl_t *gl, spec_t rhok, double T, double Te, double Tv, double Estar,
 void find_dW_dx(gl_t *gl, spec_t rhok, spec_t mu, double T, double Te, double Tv, double Estar, double Qbeam,
               spec2_t dWdrhok, spec_t dWdT, spec_t dWdTe, spec_t dWdTv, spec_t dWdQbeam);
 
-void find_Qei(spec_t rhok, double Estar, double Te, double *Qei);
+void find_Qei(gl_t *gl, spec_t rhok, double Estar, double Te, double *Qei);
 
-void find_dQei_dx(spec_t rhok, double Estar, double Te, spec_t dQeidrhok, double *dQeidTe);
+void find_dQei_dx(gl_t *gl, spec_t rhok, double Estar, double Te, spec_t dQeidrhok, double *dQeidTe);
 
 
 #endif /* _CHEM_H */ 
